# hid-io-ergoone

./: Cargo.toml  service.sh
src/: args.rs  commands.rs  keysub.rs  lib.rs  main.rs  util.rs
src/gui/: mod.rs
src/json/: types.rs  utils.rs
src/modules/: layer.rs  mod.rs  volume.rs
